--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>🦴</text></svg>"
     />
-    <title>Bark and Bone</title>
+    <title>Bark and Bowl</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
